# DISCnet_workshop

./: .buildinfo  .gitignore  CSV_reader.ipynb  ExtractionNotes.txt  GitHub_with_collaborators.html  Introduciton.html  Introduction.html  README.md  T4.ipynb  build_docs.sh  code_structure.html  data_transforms.html  extract.py  genindex.html  getting_started.html  github_with_collaborators.html  good_coding_practices.html  index.html  introduction.html  modules.html  objects.inv  packaging_python_code.html  py-modindex.html  pyproject.toml  rectangle_clustering.py  reduction.py  run_task0.py  schedule.html  search.html  searchindex.js  setup.cfg  task_3.py  test_driven_development.html  test_reduction.ipynb  the_task.html  writing_documentation.html
.github/: dependabot.yml
.github/workflows/: coverage.yml  flake8.yml  host_docs.yml
_sources/: GitHub_with_collaborators.md.txt  data_transforms.rst.txt  getting_started.md.txt  github_with_collaborators.md.txt  good_coding_practices.md.txt  index.rst.txt  modules.rst.txt  packaging_python_code.md.txt  test_driven_development.md.txt  writing_documentation.md.txt
_static/css/: my_theme.css
data_transforms/: __init__.py  angle_metric.py  extract.py
data_transforms/tests/: many-tools-classifications.csv  test_T1.py  test_T4.py  test_angle_metric.py  test_extract_T0.py  test_extract_T2.py  test_extract_t3.py
docs/source/: GitHub_with_collaborators.md  Introduction.md  code_structure.md  conf.py  getting_started.md  github_with_collaborators.md  good_coding_practices.md  index.rst  introduction.md  packaging_python_code.md  schedule.rst  test_driven_development.md  the_task.md  writing_documentation.md
docs/source/_static/css/: my_theme.css
example_data/: date_opener.ipynb  many-tools-classifications_march_7_2023.csv  mock_eyes.csv  mock_noses.csv
notes/: good_coding_practices.md  test_driven_development.md
