[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_transforms"
authors = [{name = "DISCnet"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "numpy >=1.22.3,<1.22.4",
    "pandas >=1.4.2,<1.5.2"
]

[project.optional-dependencies]
test = [
    "coverage[toml] >=6.3.2,<6.5.1",
    "flake8 >=4.0.1,<5.0.5",
]
doc = [
    "myst-nb >=0.15.0,<0.15.1",
    "sphinx >=4.5.0,<5.3.1",
    "sphinx_rtd_theme >=1.0.0,<1.0.1"
]
dev = [
    "data_transforms[test]",
    "data_transforms[doc]"
]

[project.urls]
Documentation = "https://ckrawczyk.github.io/DISCnet_workshop/"
Source = "https://github.com/CKrawczyk/DISCnet_workshop"

[tool.flit.sdist]
exclude = [
    "docs/",
    "example_data/",
    "build_docs.sh"
]

[tool.coverage.run]
omit = ["*test*"]
source = ["data_transforms"]
command_line = "-m unittest discover"

[tool.coverage.report]
show_missing = true
