[metadata]
name = data_transforms
version = 0.1.0
author = DISCnet
description = DISCnet workshop code
long_description = DISCnet workshop code covering good coding practices, GitHub usage, and test-dirven-development
url = https://github.com/CKrawczyk/DISCnet_workshop

[options]
package_dir =
    = data_transforms
python_requires = >=3.9
setup_requires =
    setuptools
install_requires =
    numpy
    pandas

[options.extras_require]
dev = 
    coverage
    flake8

[flake8]
exclude =
    .git,
    __pycache__
max-line-length = 120
ignore = W503, BLK100

[coverage:run]
omit = *test*
source = data_transforms
command_line = -m unittest discover

[coverage:report]
show_missing = True
