[metadata]
name = data_transforms
version = attr: data_transforms.__version__
author = DISCnet
description = DISCnet workshop code
long_description = DISCnet workshop code covering good coding practices, GitHub usage, and test-dirven-development
url = https://github.com/CKrawczyk/DISCnet_workshop

[options]
package_dir =
    = data_transforms
python_requires = >= 3.10
setup_requires =
    setuptools >= 61.2.0
install_requires =
    numpy >= 1.22.3, < 1.22.4
    pandas >= 1.4.2, < 1.4.3

[options.extras_require]
dev = 
    coverage >= 6.3.2, < 6.3.3
    flake8 >= 4.0.1, < 4.0.2
    myst-nb >= 0.15.0, < 0.15.1
    sphinx >= 4.5.0, < 4.5.1
    sphinx_rtd_theme >= 1.0.0, < 1.0.1

[flake8]
exclude =
    .git,
    __pycache__
max-line-length = 120
ignore = W503, BLK100

[coverage:run]
omit = *test*
source = data_transforms
command_line = -m unittest discover

[coverage:report]
show_missing = True
